--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.xxo</groupId>
+    <groupId>com.xiaoxiaomo</groupId>
     <artifactId>hadoopstack</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>hadoop_basic_touch</module>
-        <module>hadoop_practice</module>
-        <module>hadoop_rpc_server</module>
-        <module>hadoop_rpc_client</module>
+        <module>hadoop</module>
     </modules>
     <name>hadoopstack</name>
     <packaging>pom</packaging>
