--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>hadoop</module>
+        <module>kafka</module>
     </modules>
     <name>hadoopstack</name>
     <packaging>pom</packaging>
