--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>hadoop</module>
         <module>kafka</module>
+        <module>storm</module>
     </modules>
     <name>hadoopstack</name>
     <packaging>pom</packaging>
