--- a/storm/pom.xml
+++ b/storm/pom.xml
@@ -8,21 +8,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>strom</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>strom</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>storm-touch</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+
 </project>
