--- a/storm/storm-project/pom.xml
+++ b/storm/storm-project/pom.xml
@@ -1,25 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hadoopstack</artifactId>
+        <artifactId>strom</artifactId>
         <groupId>com.xiaoxiaomo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>strom</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>storm-project</artifactId>
+    <packaging>jar</packaging>
 
-    <name>strom</name>
+    <name>storm-project</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>storm-touch</module>
-        <module>storm-project</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
