--- a/storm/storm-project/pom.xml
+++ b/storm/storm-project/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>strom</artifactId>
+        <artifactId>storm</artifactId>
         <groupId>com.xiaoxiaomo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -88,7 +88,6 @@
 
         <!-- 源目录 -->
         <sourceDirectory>src/main/java</sourceDirectory>
-        <testSourceDirectory>src/test/java</testSourceDirectory>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
