--- a/hbase/pom.xml
+++ b/hbase/pom.xml
@@ -8,10 +8,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hbase</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>hbase</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>hbase-common</module>
+        <module>hbase-book</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,17 +44,17 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>0.98.8-hadoop2</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-shell</artifactId>
-            <version>0.98.8-hadoop2</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
-            <version>0.98.8-hadoop2</version>
+            <version>1.1.1</version>
         </dependency>
 
 
